--- a/slides/week_13.html
+++ b/slides/week_13.html
@@ -86,6 +86,11 @@ html = response.text
 ```
     </textarea>
   </section>
+  <section data-markdown data-background='https://media.giphy.com/media/l1J9ODTGkF996dNzG/giphy.gif' data-background-size="50%">
+    <textarea data-template>
+YES！我會寫爬蟲了！
+    </textarea>
+  </section>
 </section>
 
 <section>
