--- a/slides/week_13.html
+++ b/slides/week_13.html
@@ -211,3 +211,30 @@ print(tabulate(teacher_list, headers=['姓名', '職稱', 'Email']))
   </section>
 </section>
 
+<section>
+  <section data-markdown>
+    <textarea data-template>
+### 案例研究：蘋果新聞
+
+[國際語言學奧賽　台灣中學生奪3獎](https://tw.appledaily.com/new/realtime/20160803/921379/)
+
+    </textarea>
+  </section>
+  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
+    <textarea data-template>
+### 練習
+
+[全球臉書IG大當機　無法載入個人頁面](https://tw.news.appledaily.com/international/realtime/20181120/1470158)
+
+請利用 `requests` 擷取此頁面  
+並利用 `BeautifulSoup` 找出：
+
++ 標題
++ 發表時間
++ 記者名字
++ 主文
+
+(請參考[基本中文文本資料分析](http://localhost:4000/PythonForHumanities/slides/week12.html#/1))
+    </textarea>
+  </section>
+</section>
