--- a/slides/week_13.html
+++ b/slides/week_13.html
@@ -234,7 +234,7 @@ print(tabulate(teacher_list, headers=['姓名', '職稱', 'Email']))
 + 記者名字
 + 主文
 
-(請參考[基本中文文本資料分析](http://localhost:4000/PythonForHumanities/slides/week12.html#/1))
+(請參考[基本中文文本資料分析](./week12.html#/1))
     </textarea>
   </section>
 </section>
